--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style type="text/css">
 	body{
 		background-color: black;
@@ -19,12 +21,39 @@
 	color: black;
 	width: 40%;
 	box-shadow: 10px 10px 5px black;
+	height: 745px; 
+	float: left; 
+	background: black;
+}
+
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 30px;
+	 top: 618px;
+	 left: 15%;
+	 color: white;
+	 text-align: center;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	 top: 660px;
+	 left: 20%;
+	color: #38B6FF;
 }
 
 .right{
 	border-style: solid;
    border-width: 10px;
     border-image: black;
+    margin-left: 40%; 
+    height: 700px; 
+    background: #18191A;
 }
 
 .i2{
@@ -61,6 +90,15 @@ h2{
 
 	background-color: #18191A;
 
+
+}
+
+#t11{
+
+	background-color: #18191A;
+margin-left:40px;
+height:236px;
+
 }
 
 #h3{
@@ -74,28 +112,6 @@ h2{
 .i1{
 		height: 30px;
 }
-
-.n{
-	position: absolute;
-	font-family: arial;
-	font-weight: 2px;
-	font-size: 30px;
-	 top: 618px;
-	 left: 15%;
-	 color: white;
-	 text-align: center;
-}
-
-.n1{
-	position: absolute;
-	font-family: arial;
-	font-weight: 2px;
-	font-size: 20px;
-	 top: 660px;
-	 left: 20%;
-	color: #38B6FF;
-}
-
 
 
 .i3{
@@ -125,7 +141,126 @@ h2{
 		margin-left: 335px;
 }
 
+@media only screen and (max-width:700px) and (min-width:300px){
+
+	.left {
+	position: absolute;
+	height: 545px; 
+	float: left; 
+	background: black;
+	color: black;
+	width: 90%;
+	box-shadow: 0px 0px 0px black;
+}
+
+.i2{
+	height: 545px;
+	width:450px;
+	padding-left: 0px;
+}
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 30px;
+	top: 390px;
+	 left: 5%;
+	 color: white;
+	 text-align: center;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	 top: 430px;
+	 left: 5%;
+	color: #38B6FF;
+}
+/*_____________________________*/
+
+.right{
+	position: absolute;
+	border-style: solid;
+   border-width: 0px;
+    border-image: black;
+    margin-left: 0%; 
+    margin-top: 540px;
+    height: 1070px; 
+    background: #18191A; 
+    width: 450px;
+}
+
+	h1{
+		margin-left: 100px;
+		margin-top: 20px;
+		font-size: 50px;
+	}
+
+#p1{
+	color: #38B6FF;
+	line-height: 0.6cm;
+	background-color: #18191A;
+	margin-left: 10px;
+	font-family: Arial;
+}
+
+#t11{
+
+	background-color: #18191A;
+	margin-left:0px;
+	height: 620px;
+	width: 99%;
+}
+
+#t2{
+	height: 600px;
+}
+
+.i1{
+		height: 30px;
+}
+
+.i3{
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 150px;
+		margin-right: 0px;
+		padding-right: 0px;
+}
+.i4{	position: absolute;
+		height: 30px;
+		margin-left: 20px;
+		margin-top: 10px;
+}
+.i5{	position: absolute;
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 65px;
+}
+
+
+.i6{	position: absolute;
+		height: 30px;
+		color: white;
+		font-family: Helvetica;
+		font-size: 10px;
+		margin-top: 55px;
+		margin-left: 0px;
+}
+   td{
+        display:block;
+        width:100%;
+    }
+
+    tr{
+        display:block;    
+    }
+
+}
 </style>
+</head>
  <body>
     <div style="width: 100%;">
         <div class="left" style=" height: 745px; float: left; background: black;"> 
