--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style type="text/css">
 	body{
 		background-color: black;
@@ -19,12 +21,39 @@
 	color: black;
 	width: 40%;
 	box-shadow: 10px 10px 5px black;
+	height: 745px; 
+	float: left; 
+	background: black;
+}
+
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 30px;
+	 top: 618px;
+	 left: 15%;
+	 color: white;
+	 text-align: center;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	 top: 660px;
+	 left: 20%;
+	color: #38B6FF;
 }
 
 .right{
 	border-style: solid;
    border-width: 10px;
     border-image: black;
+    margin-left: 40%; 
+    height: 700px; 
+    background: #18191A;
 }
 
 .i2{
@@ -61,6 +90,15 @@ h2{
 
 	background-color: #18191A;
 
+
+}
+
+#t11{
+
+	background-color: #18191A;
+margin-left:40px;
+height:236px;
+
 }
 
 #h3{
@@ -74,28 +112,6 @@ h2{
 .i1{
 		height: 30px;
 }
-
-.n{
-	position: absolute;
-	font-family: arial;
-	font-weight: 2px;
-	font-size: 30px;
-	 top: 618px;
-	 left: 15%;
-	 color: white;
-	 text-align: center;
-}
-
-.n1{
-	position: absolute;
-	font-family: arial;
-	font-weight: 2px;
-	font-size: 20px;
-	 top: 660px;
-	 left: 20%;
-	color: #38B6FF;
-}
-
 
 
 .i3{
@@ -125,17 +141,137 @@ h2{
 		margin-left: 335px;
 }
 
+@media only screen and (max-width:700px) and (min-width:300px){
+
+	.left {
+	position: absolute;
+	height: 545px; 
+	float: left; 
+	background: black;
+	color: black;
+	width: 90%;
+	box-shadow: 0px 0px 0px black;
+}
+
+.i2{
+	height: 545px;
+	width:450px;
+	padding-left: 0px;
+}
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 30px;
+	top: 390px;
+	 left: 5%;
+	 color: white;
+	 text-align: center;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	 top: 430px;
+	 left: 5%;
+	color: #38B6FF;
+}
+/*_____________________________*/
+
+.right{
+	position: absolute;
+	border-style: solid;
+   border-width: 0px;
+    border-image: black;
+    margin-left: 0%; 
+    margin-top: 540px;
+    height: 1070px; 
+    background: #18191A; 
+    width: 450px;
+}
+
+	h1{
+		margin-left: 100px;
+		margin-top: 20px;
+		font-size: 50px;
+	}
+
+#p1{
+	color: #38B6FF;
+	line-height: 0.6cm;
+	background-color: #18191A;
+	margin-left: 10px;
+	font-family: Arial;
+}
+
+#t11{
+
+	background-color: #18191A;
+	margin-left:0px;
+	height: 620px;
+	width: 99%;
+}
+
+#t2{
+	height: 600px;
+}
+
+.i1{
+		height: 30px;
+}
+
+.i3{
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 150px;
+		margin-right: 0px;
+		padding-right: 0px;
+}
+.i4{	position: absolute;
+		height: 30px;
+		margin-left: 20px;
+		margin-top: 10px;
+}
+.i5{	position: absolute;
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 65px;
+}
+
+
+.i6{	position: absolute;
+		height: 30px;
+		color: white;
+		font-family: Helvetica;
+		font-size: 10px;
+		margin-top: 55px;
+		margin-left: 0px;
+}
+   td{
+        display:block;
+        width:100%;
+    }
+
+    tr{
+        display:block;    
+    }
+
+}
+</head>
+
 </style>
  <body>
     <div style="width: 100%;">
-        <div class="left" style=" height: 745px; float: left; background: black;"> 
+        <div class="left"> 
             <div> <img class="i2" src="images\i1.jpg">
              <div class="n"><b>Anurag Wagh</b></div>
              <div class="n1">Artist</div>
 </div>
         </div>
 
-        <div class="right" style="margin-left: 40%; height: 700px; background: #18191A;" > 
+        <div class="right" > 
            <h1>about me</h1>
            <p id="p1">20 years /  Artist  / Solopreneur / Computer Engg.</p>
            <p id="p1">Aspiring computer engineer with a creative mind and a passion for creating art <br>
@@ -146,12 +282,12 @@ h2{
            <hr id="l1">
 
            <h2 >What I Do</h2>
-
-           <table width="80%" height="236" border="0" cellpadding="1" cellspacing="1" bgcolor="white" margin-left="10px" style=" margin-left:40px;" id="t1">
+<div style="overflow-x:auto;">
+           <table width="80%" border="0" cellpadding="1" cellspacing="1" bgcolor="white" id="t11">
 <tr>
     <td height="62" align="center" valign="top" id="t1">
 
-        <table width="850"  cellspacing="0" cellpadding="4"id="t1" >
+        <table  cellspacing="0" cellpadding="4" id="t2"style="overflow-x:auto;" >
 
             <tr align="left" id="t1">
                 <td valign="top" id="t1" width="300">
@@ -196,6 +332,7 @@ h2{
     </td>
 </tr>
 </table>
+</div>
 <hr id="l1">
 <div>
 <a href="https://www.linkedin.com/in/anurag-wagh-239394179" target="_blank"><img src="images/f1.png" class="i3"></a>
@@ -203,7 +340,7 @@ h2{
 <a href=""><img src="images/f3.png" class="i5"></a>
 <a class="i6">anuragd230@gmail.com</a>
 </div> 
-</div>
+</div></td></tr></table>
  </div>
  </body>
 </html>
