--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style type="text/css">
+
+	*{
+		margin-left: 0;
+		margin-right: 0;	
+	}
+
 	body{
 		background-color: black;
 	}
 
 	h1{
 		color: white;
-		background-color: #18191A;
 		margin-left: 40px;
 		margin-top: 15px;
 		font-size: 70px;
@@ -54,6 +59,7 @@
     margin-left: 40%; 
     height: 700px; 
     background: #18191A;
+    border-radius: 0px 35px 35px 0px;
 }
 
 .i2{
@@ -65,7 +71,6 @@
 #p1{
 	color: #38B6FF;
 	line-height: 0.6cm;
-	background-color: #18191A;
 	margin-left: 40px;
 	font-family: Arial;
 }
@@ -73,7 +78,9 @@
 #l1{
 	width: 90%;
 	border-bottom: 1px;
+	margin-left: 20px;
 	border-color: #808080;
+
 
 }
 
@@ -81,7 +88,6 @@ h2{
 	color: white;
 	margin-left: 40px;
 	font-family: Arial;
-	background-color: #18191A;
 	padding-top: 0px;
 	padding-bottom: 0px;
 }
@@ -89,7 +95,8 @@ h2{
 #t1{
 
 	background-color: #18191A;
-
+  	align-content: center;
+  	padding-bottom: 10px;
 
 }
 
@@ -115,8 +122,8 @@ height:236px;
 
 
 .i3{
-		height: 30px;
-		margin-top: 10px;
+		height: 25px;
+		margin-top: 12px;
 		margin-left: 210px;
 		margin-right: 0px;
 		padding-right: 0px;
@@ -141,7 +148,9 @@ height:236px;
 		margin-left: 335px;
 }
 
-@media only screen and (max-width:700px) and (min-width:300px){
+
+
+@media only screen and (max-width:450px) and (min-width:200px){
 
 	.left {
 	position: absolute;
@@ -162,8 +171,129 @@ height:236px;
 	position: absolute;
 	font-family: arial;
 	font-weight: 2px;
-	font-size: 30px;
-	top: 390px;
+	font-size: 40px;
+	top: 50px;
+	left: 5%;
+	color: white;
+	text-align: center;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	top: 100px;
+	left: 5%;
+	color: #38B6FF;
+}
+/*_____________________________*/
+
+.right{
+	position: absolute;
+	border-style: solid;
+   border-width: 0px;
+    border-image: black;
+    margin-left: 0%; 
+    margin-top: 540px;
+    height: 1070px; 
+    background: #18191A; 
+    width: 450px;
+    border-radius: 0px 0px 0px 0px;
+}
+
+	h1{
+		margin-left: 100px;
+		margin-top: 20px;
+		font-size: 50px;
+	}
+
+#p1{
+	color: #38B6FF;
+	line-height: 0.6cm;
+	background-color: #18191A;
+	margin-left: 10px;
+	font-family: Arial;
+}
+
+#t11{
+
+	background-color: #18191A;
+	margin-left:0px;
+	height: 620px;
+	width: 99%;
+}
+
+#t2{
+	height: 600px;
+}
+
+.i1{
+		height: 30px;
+}
+
+.i3{
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 150px;
+		margin-right: 0px;
+		padding-right: 0px;
+}
+.i4{	position: absolute;
+		height: 30px;
+		margin-left: 20px;
+		margin-top: 10px;
+}
+.i5{	position: absolute;
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 65px;
+}
+
+
+.i6{	position: absolute;
+		height: 30px;
+		color: white;
+		font-family: Helvetica;
+		font-size: 10px;
+		margin-top: 55px;
+		margin-left: 0px;
+}
+   td{
+        display:block;
+        width:100%;
+        margin: 0 5px;
+    }
+
+    tr{
+        display:block;    
+    }
+
+}
+
+@media only screen and (max-width:1200px) and (min-width:450px){
+
+	.left {
+	position: absolute;
+	height: 545px; 
+	float: left; 
+	background: black;
+	color: black;
+	width: 100%;
+	box-shadow: 0px 0px 0px black;
+}
+
+.i2{
+	height: 900px;
+	width:100%;
+	padding-left: 0px;
+}
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 60px;
+	top: 90px;
 	 left: 5%;
 	 color: white;
 	 text-align: center;
@@ -173,9 +303,151 @@ height:236px;
 	position: absolute;
 	font-family: arial;
 	font-weight: 2px;
-	font-size: 20px;
-	 top: 430px;
+	font-size: 40px;
+	 top: 160px;
 	 left: 5%;
+	color: #38B6FF;
+}
+/*_____________________________*/
+
+.right{
+	position: absolute;
+	border-style: solid;
+   border-width: 0px;
+    border-image: black;
+    margin-left: 0%; 
+    margin-top: 790px;
+    height: 1070px; 
+    background: #18191A; 
+    width: 100%;
+    border-radius: 0px 0px 0px 0px;
+}
+
+	h1{
+		margin-left: 220px;
+		margin-top: 20px;
+		font-size: 50px;
+	}
+
+#p1{
+	color: #38B6FF;
+	line-height: 0.6cm;
+	background-color: #18191A;
+	margin-left: 25px;
+	font-size: 18px;
+	font-family: Arial;
+}
+
+h2{
+	color: white;
+	margin-left: 40px;
+	font-family: Arial;
+	background-color: #18191A;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	font-size: 35px;
+}
+
+#t11{
+
+	background-color: #18191A;
+	margin-left:0px;
+	height: 660px;
+	width: 97%;
+}
+
+#t1{
+
+	background-color: #18191A;
+  	align-content: center;
+  	padding-bottom: 10px;
+  	padding-left: 10px;
+}
+
+
+#t2{
+	height: 640px;
+}
+
+.i1{
+		height: 40px;
+}
+
+.i3{
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 150px;
+		margin-right: 0px;
+		padding-right: 0px;
+}
+.i4{	position: absolute;
+		height: 30px;
+		margin-left: 20px;
+		margin-top: 10px;
+}
+.i5{	position: absolute;
+		height: 30px;
+		margin-top: 10px;
+		margin-left: 65px;
+}
+
+
+.i6{	position: absolute;
+		height: 30px;
+		color: white;
+		font-family: Helvetica;
+		font-size: 10px;
+		margin-top: 22px;
+		margin-left: 180px;
+}
+   
+  td{
+        display:block;
+        width:100%;
+        padding-left: 15px;
+        padding-bottom: 30px;
+    }
+
+    tr{
+        display:block;    
+    }
+
+@media only screen and (max-width:304px) and (min-width:50px){
+
+
+	.left {
+	position: absolute;
+	height: 545px; 
+	float: left; 
+	background: black;
+	color: black;
+	width: 90%;
+	box-shadow: 0px 0px 0px black;
+}
+
+.i2{
+	height: 545px;
+	width:450px;
+	padding-left: 0px;
+}
+.n{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	top: 10px;
+	left: 0%;
+	color: white;
+	text-align:left;
+}
+
+.n1{
+	position: absolute;
+	font-family: arial;
+	font-weight: 2px;
+	font-size: 20px;
+	top: 100px;
+	left: 5%;
 	color: #38B6FF;
 }
 /*_____________________________*/
@@ -259,13 +531,17 @@ height:236px;
     }
 
 }
-</head>
+	
+}
+
 
 </style>
+</head>
+
  <body>
     <div style="width: 100%;">
         <div class="left"> 
-            <div> <img class="i2" src="images\i1.jpg">
+            <div> <img class="i2" src="images\i1.png">
              <div class="n"><b>Anurag Wagh</b></div>
              <div class="n1">Artist</div>
 </div>
@@ -282,21 +558,23 @@ height:236px;
            <hr id="l1">
 
            <h2 >What I Do</h2>
+
 <div style="overflow-x:auto;">
-           <table width="80%" border="0" cellpadding="1" cellspacing="1" bgcolor="white" id="t11">
-<tr>
-    <td height="62" align="center" valign="top" id="t1">
+
+<table width="80%" border="0" cellpadding="1" cellspacing="1" bgcolor="white" id="t11">
+	<tr>
+    	<td height="62" valign="top" id="t1" >
 
         <table  cellspacing="0" cellpadding="4" id="t2"style="overflow-x:auto;" >
 
-            <tr align="left" id="t1">
-                <td valign="top" id="t1" width="300">
+            <tr align="left">
+                <td valign="top" width="300" id="td1">
                 	<img src="images/v4.png" class="i1">
                     <p id="h3">Write Blog</p>
                      <font face="system-ui" color="white" size="2" id="h3">
                           I like to share my thoughts through <br>writing blogs & article.
                     </font>
-                
+
                 <td valign="top" id="t1">
                 	<img src="images/v3.png" class="i1">
                     <p id="h3">Design</p>
@@ -305,20 +583,20 @@ height:236px;
                     </font>
             </tr>
 
-            <tr align="left" id="t1">
+            <tr align="left">
 
-                <td valign="top" id="t1" >
+                <td valign="top" >
                 	<br>
                 	 <img src="images/v1.png" class="i1">
                 	 <p id="h3">Video Creator</p>
                     <font face="Verdana,Geneva,sans-serif" color="white" size="2" padding="18" id="h3">
                        Like to create video on learning stuffs.
                     </font>
-                    <br><br><br>
+                    <br>
 
                 </td>
 
-                <td valign="top" id="t1">
+                <td valign="top">
                 	<br>
                 	<img src="images/v2.png" class="i1">
                 	<p id="h3">Programmer</p>
