--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@ h2{
 #t11{
 
 	background-color: #18191A;
-margin-left:40px;
-height:236px;
+	margin-left:40px;
+	height:236px;
+	width:80%;
 
 }
 
@@ -221,7 +222,7 @@ height:236px;
 	background-color: #18191A;
 	margin-left:0px;
 	height: 620px;
-	width: 99%;
+	width: 90%;
 }
 
 #t2{
@@ -561,7 +562,7 @@ h2{
 
 <div style="overflow-x:auto;">
 
-<table width="80%" border="0" cellpadding="1" cellspacing="1" bgcolor="white" id="t11">
+<table  border="0" cellpadding="1" cellspacing="1" bgcolor="white" id="t11">
 	<tr>
     	<td height="62" valign="top" id="t1" >
 
